samples/_failures_safe/1761174838_240228_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25f6ded4.c: In function ‘main’:
./samples/SAFE/__tmp_25f6ded4.c:120:5: error: expected declaration or statement at end of input
  120 |     if (!compress_data(input.data, input.size, &compressed)) {
      |     ^~
./samples/SAFE/__tmp_25f6ded4.c:120:5: error: expected declaration or statement at end of input
